<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTeamActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapser"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_500"
                android:elevation="4dp"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:background="@color/purple_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>



    <TextView
        android:id="@+id/titleAddTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_activity_add"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/name_form"
                android:textColor="@color/text_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@+id/nameTextView"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:autofillHints="@string/name_form"
                android:background="@drawable/ic_field"
                android:ems="80"
                android:hint="@string/name_form"
                android:inputType="textAutoComplete"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="120dp"
                android:layout_height="56dp"
                android:layout_below="@+id/dateTextView"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:autofillHints="@string/number_form"
                android:background="@drawable/ic_field"
                android:ems="3"
                android:hint="@string/number_form"
                android:inputType="date|text"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp" />
            <!--<EditText
                android:id="@+id/dateEditText"
                android:layout_width="120dp"
                android:layout_height="56dp"
                android:layout_below="@+id/dateTextView"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:autofillHints="@string/number_form"
                android:background="@drawable/ic_field"
                android:ems="3"
                android:hint="@string/number_form"
                android:inputType="date|text"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp" />-->

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameEditText"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/number_form"
                android:textColor="@color/text_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/urlEditText"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@+id/urlTextView"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_toEndOf="@+id/spinner"
                android:layout_toRightOf="@+id/spinner"
                android:autofillHints=""
                android:background="@drawable/ic_field"
                android:ems="10"
                android:hint="@string/url_form"
                android:inputType="textUri|text"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/urlTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameEditText"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@+id/dateTextView"
                android:layout_toRightOf="@+id/dateTextView"
                android:text="@string/url_form"
                android:textColor="@color/text_dark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/descriptionTextView"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:autofillHints="@string/description_form"
                android:background="@drawable/ic_field"
                android:ems="255"
                android:gravity="clip_vertical"
                android:hint="@string/description_form"
                android:inputType="textMultiLine"
                android:lines="6"
                android:maxLines="12"
                android:minLines="6"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinner"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/description_form"
                android:textColor="@color/text_dark"
                android:textSize="18sp" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="240dp"
                android:layout_height="56dp"
                android:layout_below="@+id/descriptionEditText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/ic_btn"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>